# P2P-Worm

./: agent.go  guid.py  p2p.go  readme.md  recon.py  tor_connector.go
P2P_control/: def.c  def.h  main.c  makefile  p2p_loader.c  p2p_loader.h  watchdog.c  watchdog.h
P2P_control/dll/: c2_config.c
injector/: add_header.py  injector.cpp  start.ps1
injector/Injector/: Injector.sln
injector/Injector/Injector/: Injector.vcxproj  Injector.vcxproj.filters
packer/: makefile  packer.c  vm.c  vm.h
ptt‑lib/: CMakeLists.txt  exporter.c  exporter.h  kerb_reader.c  kerb_reader.h  ptt.c  ptt.h  start.py
scanner/: Makefile  app.c  app.h  cve_db.h  cve_db_sqlite.c  exploit_db.h  exploit_db_csv.c  main.c  sysinfo.c  sysinfo.h  util.c  util.h
scanner/tools/: sample_exploits.csv  update_nvd_sqlite.py
server/: config.php  db.php  db.sql  gate.php  home.php  st.css
